--- a/Templates/DefaultTemplate.html
+++ b/Templates/DefaultTemplate.html
@@ -29,7 +29,7 @@
         <div>
 
             <a href="Index.html">
-            <div id="DefaultTitle">BLOCK::WORKS</div>
+            <div id="DefaultTitle">BlockWorks</div>
             <div id="DefaultSubtitle">BUILDING BLOCKS FOR EMBEDDED SYSTEMS</div>
             </a>
 
